Add UI improvements: gradient hero sections, hover effects on icons, shadows on forms and services table, additional FAQ items

--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loyal Roots - Online Marketing Bureau</title>
+    <title>Loyal Roots | Online Marketing Bureau Amsterdam</title>
+    <meta name="description" content="Loyal Roots helpt ondernemers met het opzetten en optimaliseren van online advertenties. Specialist in Google Ads, Meta Ads en Display advertising.">
+    <meta name="keywords" content="online marketing, google ads, meta ads, facebook ads, amsterdam, advertenties, display advertising">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link 
-      rel="preload" 
-      as="image" 
-      href="/hero-bg.jpg"
-      fetchpriority="high"
-    />
   </head>
   <body>
     <div id="root"></div>
