Add Vercel Speed Insights and optimize SEO configuration

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <meta property="og:title" content="Loyal Roots | Online Marketing Bureau Amsterdam">
+    <meta property="og:description" content="Wij helpen ondernemers met het opzetten en optimaliseren van online advertenties">
+    <meta property="og:image" content="https://loyalroots.nl/og-image.jpg">
+    <meta property="og:url" content="https://loyalroots.nl">
+    <link rel="canonical" href="https://loyalroots.nl">
   </head>
   <body>
     <div id="root"></div>
